--- a/index.html
+++ b/index.html
@@ -81,8 +81,14 @@
                 style="font-size: 1.25rem; color: #333; margin-right: 30px;">Testimonials</a>
             </li>
           </ul>
+          <a href="images/vishal-resume.pdf" download>
+            <button class="download-btn">
+              <i class="bi bi-download"></i> Download CV
+            </button>
+          </a>
         </div>
       </div>
+
     </nav>
   </header>
 
@@ -120,7 +126,8 @@
                 NodeJs Developer
               </h5>
               <p class="postf">
-                Node.js, Express.js, Nest.js, Passport, OAuth, Mongodb, Socket.
+                Node.js, Express.js, Nest.js, Passport, OAuth, Mongodb, Socket, React.js, Javascript, Typescript,
+                Payment Gateway and SQL.
               </p>
             </div>
           </div>
@@ -163,7 +170,7 @@
     </div>
   </section>
 
-  <section id="about">
+  <!-- <section id="about">
     <div class="container">
       <div class="row">
         <div class="col-lg-4">
@@ -261,8 +268,70 @@
 
       </div>
     </div>
-  </section>
+  </section> -->
 
+  <section id="about">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-4">
+          <div id="education" class="h-100 bg-yellow p-4 rounded-4">
+            <h3>Education</h3>
+            <div class="py-4">
+              <p class="text-dark-emphasis">2016 - 2020</p>
+              <h5>Bachelors of Technology</h5>
+              <p class="text-dark-emphasis">Chandigarh Engineering College</p>
+            </div>
+            <p class="text-dark-emphasis">2015 - 2016</p>
+            <h5>Intermediate</h5>
+            <p class="text-dark-emphasis">B.B.S Vidya Mandir</p>
+            <p class="text-dark-emphasis">2012 - 2013</p>
+            <h5>High School</h5>
+            <p class="text-dark-emphasis">B.B.S Vidya Mandir</p>
+          </div>
+        </div>
+
+        <div class="col-lg-4">
+          <div id="experience" class="h-100 bg-yellow p-4 rounded-4">
+            <h3>Experiences</h3>
+            <div class="py-4">
+              <p class="text-dark-emphasis">2024 - Present</p>
+              <h5>Atrois Software Private Limited</h5>
+              <p class="text-dark-emphasis">
+                Developing scalable APIs and backend systems for applications in industries like healthcare, logistics,
+                and dating.
+              </p>
+            </div>
+            <p class="text-dark-emphasis">2022 - 2023</p>
+            <h5>Klythe Private Limited</h5>
+            <p class="text-dark-emphasis">
+              Built robust backend solutions using Node.js, Express.js, and MongoDB. Led the development of RESTful APIs
+              for customer-centric applications. Collaborated with cross-functional teams to deliver secure and
+              efficient
+              web services.
+            </p>
+          </div>
+        </div>
+
+        <div class="col-lg-4">
+          <div id="interests" class="h-100 bg-yellow p-4 rounded-4">
+            <h3>Interests</h3>
+            <div class="py-4">
+              <ul>
+                <li>Backend Development: Exploring scalable and secure backend architectures.</li>
+                <li>API Design: Crafting efficient and user-friendly APIs.</li>
+                <li>Database Optimization: Working with MongoDB and MySQL to improve performance.</li>
+                <li>Open Source Contribution: Contributing to and learning from open-source projects.</li>
+                <li>Cloud Technologies: Gaining deeper knowledge in AWS, Docker, and Kubernetes.</li>
+                <li>Learning New Technologies: Staying updated on the latest trends in web development.</li>
+                <li>Problem-Solving: Enjoy solving logical problems and puzzles.</li>
+                <li>Gaming: Playing strategy or simulation games to relax and sharpen thinking.</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <section class="portfolio py-5" id="project">
     <div class="container">
@@ -272,9 +341,6 @@
 
           <div class="col-lg-6" data-aos="fade-up">
             <div class="section-header text-center">
-              <h4 class="fw-bold fs-2 txt-fx slide-up">
-                As a passionate Node.js developer, I am dedicated to creating efficient, scalable, and secure backend
-                solutions that power modern applications.
             </div><!--section-header-->
           </div>
 
@@ -287,14 +353,14 @@
         <div class="grid p-0 clearfix row row-cols-2 row-cols-lg-3 row-cols-xl-4" data-aos="fade-up">
           <div class="col mb-4 portfolio-item photography">
             <a href="images/shahaya.png" data-lightbox="illustration-1" data-title="illustration-1"
-              title="Sample Caption goes here for Portfolio Item 1."><img src="images/shahaya.png"
-                class="img-fluid rounded-4" alt="portfolio"></a>
+              title="Shahaya is a virtual healing platform that connects therapists and individuals for online consultations."><img
+                src="images/shahaya.png" class="img-fluid rounded-4" alt="portfolio"></a>
 
           </div>
           <div class="col mb-4 portfolio-item branding graphicdesign">
             <a href="images/cm-app.png" data-lightbox="illustration-3" data-title="illustration-3"
-              title="Sample Caption goes here for Portfolio Item 3."><img src="images/cm-app.png"
-                class="img-fluid rounded-4" alt="portfolio"></a>
+              title="CM App is a customer and driver platform designed to facilitate the delivery of items from one location to another."><img
+                src="images/cm-app.png" class="img-fluid rounded-4" alt="portfolio"></a>
           </div>
           <div class="col mb-4 portfolio-item graphicdesign">
             <a href="images/illustration-4.jpg" data-lightbox="illustration-4" data-title="illustration-4"
@@ -303,8 +369,8 @@
           </div>
           <div class="col mb-4 portfolio-item photography illustrations">
             <a href="images/cm-app.png" data-lightbox="illustration-5" data-title="illustration-5"
-              title="Sample Caption goes here for Portfolio Item 5."><img src="images/cm-app.png"
-                class="img-fluid rounded-4" alt="portfolio"></a>
+              title="CM App is a customer and driver platform designed to facilitate the delivery of items from one location to another.."><img
+                src="images/cm-app.png" class="img-fluid rounded-4" alt="portfolio"></a>
           </div>
           <div class="col mb-4 portfolio-item graphicdesign">
             <a href="images/illustration-1.jpg" data-lightbox="illustration-1" data-title="illustration-1"
@@ -312,38 +378,40 @@
                 class="img-fluid rounded-4" alt="portfolio"></a>
           </div>
           <div class="col mb-4 portfolio-item graphicdesign photography">
-            <a href="images/wave12.png" data-lightbox="illustration-2" data-title="illustration-2"
-              title="Sample Caption goes here for Portfolio Item 7."><img src="images/wave12.png"
+            <a href="images/wave12.png" data-lightbox="illustration-2" data-title="illustration-2" title=" Wave is a dating app that connects users through profile matching and messaging features. 
+              Technologies used include Node.js, MongoDB, and React"><img src="images/wave12.png"
                 class="img-fluid rounded-4" alt="portfolio"></a>
           </div>
           <div class="col mb-4 portfolio-item illustrations graphicdesign">
-            <a href="images/payever.png" data-lightbox="illustration-3" data-title="illustration-3"
-              title="Sample Caption goes here for Portfolio Item 8."><img src="images/payever.png"
+            <a href="images/payever.png" data-lightbox="illustration-3" data-title="illustration-3" title="Payever is a payment gateway solution enabling seamless transactions for businesses and consumers. 
+              Technologies used include Node.js, Stripe, and MySQL.."><img src="images/payever.png"
                 class="img-fluid rounded-4" alt="portfolio"></a>
           </div>
           <div class="col mb-4 portfolio-item branding photography graphicdesign">
             <a href="images/payever.png" data-lightbox="illustration-4" data-title="illustration-4"
-              title="Sample Caption goes here for Portfolio Item 9."><img src="images/payever.png"
+              title="Payever is a payment gateway solution enabling seamless transactions for businesses and consumers. 
+              Technologies used include Node.js, Stripe, and MySQL."><img src="images/payever.png"
                 class="img-fluid rounded-4" alt="portfolio"></a>
           </div>
           <div class="col mb-4 portfolio-item illustrations graphicdesign branding">
-            <a href="images/shahya-admin.png" data-lightbox="illustration-5" data-title="illustration-5"
-              title="Sample Caption goes here for Portfolio Item1 0."><img src="images/shahya-admin.png"
-                class="img-fluid rounded-4" alt="portfolio"></a>
+            <a href="images/shahya-admin.png" data-lightbox="illustration-5" data-title="illustration-5" title="The Shahaya Admin Panel enables administrators to manage users, sessions, and therapists effectively. 
+              Built using React and Node.js."><img src="images/shahya-admin.png" class="img-fluid rounded-4"
+                alt="portfolio"></a>
           </div>
           <div class="col mb-4 portfolio-item photography">
             <a href="images/shahya-admin.png" data-lightbox="illustration-1" data-title="illustration-1"
-              title="Sample Caption goes here for Portfolio Item1 1."><img src="images/shahya-admin.png"
+              title="The Shahaya Admin Panel enables administrators to manage users, sessions, and therapists effectively. 
+              Built using React and Node.js.."><img src="images/shahya-admin.png"
                 class="img-fluid rounded-4" alt="portfolio"></a>
           </div>
           <div class="col mb-4 portfolio-item photography">
             <a href="images/edulink.png" data-lightbox="illustration-1" data-title="illustration-1"
-              title="Sample Caption goes here for Portfolio Item1 1."><img src="images/edulink.png"
+              title="facilitate information for visa and universityr details of any country"><img src="images/edulink.png"
                 class="img-fluid rounded-4" alt="portfolio"></a>
           </div>
           <div class="col mb-4 portfolio-item photography">
             <a href="images/edulink2.png" data-lightbox="illustration-1" data-title="illustration-1"
-              title="Sample Caption goes here for Portfolio Item1 1."><img src="images/edulink2.png"
+              title="Chatbot for education purpose where we facilitate the answer of any questions realated to education"><img src="images/edulink2.png"
                 class="img-fluid rounded-4" alt="portfolio"></a>
           </div>
 
@@ -541,8 +609,10 @@
               </h5>
               <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordion-flush">
                 <div class="accordion-body">
-                  <p>I work on a variety of web development projects, including backend and frontend applications, mobile
-                    app development, and API design. My focus is on delivering robust, user-friendly solutions tailored to
+                  <p>I work on a variety of web development projects, including backend and frontend applications,
+                    mobile
+                    app development, and API design. My focus is on delivering robust, user-friendly solutions tailored
+                    to
                     client needs.</p>
                 </div>
               </div>
@@ -557,7 +627,8 @@
               </h5>
               <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordion-flush">
                 <div class="accordion-body">
-                  <p>I specialize in Node.js, Express.js, Nest.js, MongoDB, MySQL, Docker, Kubernetes, JWT, Passport, Git,
+                  <p>I specialize in Node.js, Express.js, Nest.js, MongoDB, MySQL, Docker, Kubernetes, JWT, Passport,
+                    Git,
                     OAuth, and various payment gateways like Razorpay and Stripe. I'm also proficient in React.js for
                     frontend development.</p>
                 </div>
@@ -589,7 +660,8 @@
               </h5>
               <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordion-flush">
                 <div class="accordion-body">
-                  <p>I believe in clear, open communication throughout the project. I regularly provide updates, make sure
+                  <p>I believe in clear, open communication throughout the project. I regularly provide updates, make
+                    sure
                     to address any concerns promptly, and maintain transparency in every phase of development.</p>
                 </div>
               </div>
@@ -614,7 +686,7 @@
       </div>
     </div>
   </section>
-  
+
 
   <section class="p-5 bg-yellow py-5 mt-3" id="contact">
     <div class="container">
@@ -676,7 +748,7 @@
         </div>
         <div class="col-md-3">
           <div class="row">
-          
+
           </div>
         </div>
         <div class="col-md-5">
