--- a/index.html
+++ b/index.html
@@ -388,8 +388,7 @@
                 class="img-fluid rounded-4" alt="portfolio"></a>
           </div>
           <div class="col mb-4 portfolio-item branding photography graphicdesign">
-            <a href="images/payever.png" data-lightbox="illustration-4" data-title="illustration-4"
-              title="Payever is a payment gateway solution enabling seamless transactions for businesses and consumers. 
+            <a href="images/payever.png" data-lightbox="illustration-4" data-title="illustration-4" title="Payever is a payment gateway solution enabling seamless transactions for businesses and consumers. 
               Technologies used include Node.js, Stripe, and MySQL."><img src="images/payever.png"
                 class="img-fluid rounded-4" alt="portfolio"></a>
           </div>
@@ -399,20 +398,19 @@
                 alt="portfolio"></a>
           </div>
           <div class="col mb-4 portfolio-item photography">
-            <a href="images/shahya-admin.png" data-lightbox="illustration-1" data-title="illustration-1"
-              title="The Shahaya Admin Panel enables administrators to manage users, sessions, and therapists effectively. 
-              Built using React and Node.js.."><img src="images/shahya-admin.png"
-                class="img-fluid rounded-4" alt="portfolio"></a>
+            <a href="images/shahya-admin.png" data-lightbox="illustration-1" data-title="illustration-1" title="The Shahaya Admin Panel enables administrators to manage users, sessions, and therapists effectively. 
+              Built using React and Node.js.."><img src="images/shahya-admin.png" class="img-fluid rounded-4"
+                alt="portfolio"></a>
           </div>
           <div class="col mb-4 portfolio-item photography">
             <a href="images/edulink.png" data-lightbox="illustration-1" data-title="illustration-1"
-              title="facilitate information for visa and universityr details of any country"><img src="images/edulink.png"
-                class="img-fluid rounded-4" alt="portfolio"></a>
+              title="facilitate information for visa and universityr details of any country"><img
+                src="images/edulink.png" class="img-fluid rounded-4" alt="portfolio"></a>
           </div>
           <div class="col mb-4 portfolio-item photography">
             <a href="images/edulink2.png" data-lightbox="illustration-1" data-title="illustration-1"
-              title="Chatbot for education purpose where we facilitate the answer of any questions realated to education"><img src="images/edulink2.png"
-                class="img-fluid rounded-4" alt="portfolio"></a>
+              title="Chatbot for education purpose where we facilitate the answer of any questions realated to education"><img
+                src="images/edulink2.png" class="img-fluid rounded-4" alt="portfolio"></a>
           </div>
 
         </div>
@@ -478,6 +476,38 @@
               </p>
               <h5>
                 Ashu - FullStack Developer
+              </h5>
+              <p class="postd">
+                9/01/2024
+              </p>
+            </div>
+          </div>
+          <div class="testimonial-card  rounded-3 py-4 px-4 swiper-slide">
+            <div class="text-start">
+              <p>
+                Working with Vishal was an absolute pleasure. His deep understanding of the technical aspects of our
+                projects, combined with his ability to communicate complex concepts clearly, made him an invaluable team
+                member. Vishal consistently demonstrated a proactive approach, always seeking solutions to challenges
+                and ensuring that deadlines were met without compromising quality."
+              </p>
+              <h5>
+                Manali - Backend Developer
+              </h5>
+              <p class="postd">
+                9/01/2024
+              </p>
+            </div>
+          </div>
+          <div class="testimonial-card  rounded-3 py-4 px-4 swiper-slide">
+            <div class="text-start">
+              <p>
+                "Vishal’s technical expertise and problem-solving abilities were instrumental in driving the success of
+                our data-driven projects. His ability to bridge the gap between development and data science ensured
+                smooth workflows and efficient integration of analytical models into production systems. Vishal’s
+                attention to detail, collaborative spirit, and keen understanding of both technical and business"
+              </p>
+              <h5>
+                Krishan kumar - Data Scientist
               </h5>
               <p class="postd">
                 9/01/2024
