--- a/index.html
+++ b/index.html
@@ -170,110 +170,10 @@
     </div>
   </section>
 
-  <!-- <section id="about">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-4">
-          <div class="h-100 bg-yellow p-4 rounded-4">
-            <h3>
-              Education
-            </h3>
-            <div class="py-4">
-              <p class="text-dark-emphasis">
-                2016 - 2020
-              </p>
-              <h5>
-                Bachelors of Technology
-              </h5>
-              <p class="text-dark-emphasis">
-                Chandigarh Engineering College
-              </p>
-            </div>
-            <p class="text-dark-emphasis">
-              2015 - 2016
-            </p>
-            <h5>
-              Intermediate
-            </h5>
-            <p class="text-dark-emphasis">
-              B.B.S Vidya Mandir
-            </p>
-            <p class="text-dark-emphasis">
-              2012 - 2013
-            </p>
-            <h5>
-              High School
-            </h5>
-            <p class="text-dark-emphasis">
-              B.B.S Vidya Mandir
-            </p>
-          </div>
-        </div>
-
-        <div class="col-lg-4">
-          <div class="h-100 bg-green p-4 rounded-4">
-            <h3>
-              Experiences
-            </h3>
-            <div class="py-4">
-              <p class="text-dark-emphasis">
-                2024 - Present
-              </p>
-              <h5>
-                Atrois Software Private Limited
-              </h5>
-              <p class="text-dark-emphasis">
-                Developing scalable APIs and backend systems for applications in industries like healthcare, logistics,
-                and dating. </p>
-            </div>
-            <p class="text-dark-emphasis">
-              2022 - 2023
-            </p>
-            <h5>
-              Klythe Private Limited
-            </h5>
-            <p class="text-dark-emphasis">
-              Built robust backend solutions using Node.js, Express.js, and MongoDB.
-              Led the development of RESTful APIs for customer-centric applications.
-              Collaborated with cross-functional teams to deliver secure and efficient web services. </p>
-          </div>
-        </div>
-
-        <div class="col-lg-4">
-          <div class="h-100 bg-teal p-4 rounded-4">
-            <h3>
-              Interests
-            </h3>
-            <div class="py-4">
-              <ul>
-                <li>Backend Development: Exploring scalable and secure backend architectures.
-                </li>
-                <li>API Design: Crafting efficient and user-friendly APIs.
-                </li>
-                <li>Database Optimization: Working with MongoDB and MySQL to improve performance.</li>
-                <li>Open Source Contribution: Contributing to and learning from open-source projects.
-                </li>
-                <li>Cloud Technologies: Gaining deeper knowledge in AWS, Docker, and Kubernetes.
-                </li>
-                <li>Learning New Technologies: Staying updated on the latest trends in web development.
-                </li>
-                <li>Problem-Solving: Enjoy solving logical problems and puzzles.
-                </li>
-                <li>Gaming: Playing strategy or simulation games to relax and sharpen thinking.
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
-
-      </div>
-    </div>
-  </section> -->
-
   <section id="about">
     <div class="container">
       <div class="row">
-        <div class="col-lg-4">
+        <div class="col-lg-4 mt-4">
           <div id="education" class="h-100 bg-yellow p-4 rounded-4">
             <h3>Education</h3>
             <div class="py-4">
@@ -290,7 +190,7 @@
           </div>
         </div>
 
-        <div class="col-lg-4">
+        <div class="col-lg-4 mt-4">
           <div id="experience" class="h-100 bg-yellow p-4 rounded-4">
             <h3>Experiences</h3>
             <div class="py-4">
@@ -312,7 +212,7 @@
           </div>
         </div>
 
-        <div class="col-lg-4">
+        <div class="col-lg-4 mt-4">
           <div id="interests" class="h-100 bg-yellow p-4 rounded-4">
             <h3>Interests</h3>
             <div class="py-4">
@@ -521,102 +421,6 @@
     </div>
   </section>
 
-  <!-- <section>
-    <div class="container">
-      <div class="text-center pt-5">
-        <h2 class="display-3">
-          FAQs
-        </h2>
-      </div>
-      <div class="row mt-5">
-        <div class="col-lg-6">
-          <img src="images/web-iamge.jpg" class="img-fluid">
-        </div>
-        <div class="col-lg-6">
-          <div class="accordion accordion-flush" id="accordion-flush">
-            <div class="accordion-item border mb-3 rounded-3">
-              <h5 class="accordion-header">
-                <button class="accordion-button collapsed" style="font-weight:bold;" type="button"
-                  data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true"
-                  aria-controls="collapseOne">
-                  What kind of projects do you work on?
-                </button>
-              </h5>
-              <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordion-flush"" >
-                                <div class=" accordion-body">
-                <p>I work on a variety of web development projects, including backend and frontend applications, mobile
-                  app development, and API design. My focus is on delivering robust, user-friendly solutions tailored to
-                  client needs</p>
-              </div>
-            </div>
-          </div>
-          <div class="accordion-item border mb-3 rounded-3">
-            <h5 class="accordion-header">
-              <button class="accordion-button collapsed" style="font-weight:bold;" type="button"
-                data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false"
-                aria-controls="collapseTwo">
-                What are your technical skills?
-              </button>
-            </h5>
-            <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordion-flush">
-              <div class="accordion-body">
-                <p>I specialize in Node.js, Express.js, Nest.js, MongoDB, MySQL, Docker, Kubernetes, JWT, Passport, Git,
-                  OAuth
-                  and various payment gateways like Razorpay and Stripe. I'm also proficient in React.js for frontend
-                  development.</p>
-              </div>
-            </div>
-          </div>
-          <div class="accordion-item border mb-3 rounded-3">
-            <h5 class="accordion-header">
-              <button class="accordion-button collapsed" style="font-weight:bold;" type="button"
-                data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false"
-                aria-controls="collapseThree">
-                How can I contact you for a project or collaboration?
-              </button>
-            </h5>
-            <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordion-flush">
-              <div class="accordion-body">
-                <p>You can reach me through my contact page or directly via email at <a
-                    href="mailto:vishalashu251001@gmail.com">vishalashu251001@gmail.com</a>. I’d love to discuss
-                  how we can work together on your project..</p>
-              </div>
-            </div>
-          </div>
-          <div class="accordion-item border mb-3 rounded-3">
-            <h5 class="accordion-header">
-              <button class="accordion-button collapsed" style="font-weight:bold;" type="button"
-                data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false"
-                aria-controls="collapseFour">
-                How do you ensure effective communication with your clients or teams? </button>
-            </h5>
-            <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordion-flush">
-              <div class="accordion-body">
-                <p>I believe in clear, open communication throughout the project. I regularly provide updates, make sure
-                  to address any concerns promptly, and maintain transparency in every phase of development.</p>
-              </div>
-            </div>
-          </div>
-          <div class="accordion-item border mb-3 rounded-3">
-            <h5 class="accordion-header">
-              <button class="accordion-button collapsed" style="font-weight:bold;" type="button"
-                data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false"
-                aria-controls="collapseFive">
-                What is your approach to project management? </button>
-            </h5>
-            <div id="collapseFive" class="accordion-collapse collapse" data-bs-parent="#accordion-flush">
-              <div class="accordion-body">
-                <p>I use Agile methodologies to manage projects, ensuring flexibility and continuous delivery. I break
-                  down projects into manageable tasks, prioritize them, and make sure every milestone is met.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    </div>
-  </section> -->
-
 
   <section>
     <div class="container">
@@ -637,7 +441,7 @@
                   What kind of projects do you work on?
                 </button>
               </h5>
-              <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordion-flush">
+              <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordion-flush">
                 <div class="accordion-body">
                   <p>I work on a variety of web development projects, including backend and frontend applications,
                     mobile
