--- a/index.html
+++ b/index.html
@@ -547,7 +547,7 @@
               rows="3"></textarea>
           </div>
           <div class="d-grid">
-            <button type="button" class="btn btn-dark btn-lg text-uppercase rounded-4">
+            <button type="button"  id="submitBtn" class="btn btn-dark btn-lg text-uppercase rounded-4">
               Submit
             </button>
           </div>
