--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 style="font-size: 1.25rem; color: #333; margin-right: 30px;">Testimonials</a>
             </li>
           </ul>
-          <a href="images/vishal-resume.pdf" download>
+          <a href="images/vishaljaiswal_resume.pdf" download>
             <button class="download-btn">
               <i class="bi bi-download"></i> Download CV
             </button>
